website/.happypack/s--1324336731
SyntaxError: C:/Users/david/repositories/stemn-frontend/website/src/app/app.js: Unexpected token, expected { (11:0)

[0m [90m  9 | [39m
 [90m 10 | [39m[90m// Angular modules[39m
[31m[1m>[22m[39m[90m 11 | [39m[36mimport[39m ngAnimate          from [32m'angular-animate'[39m[33m;[39m 
 [90m    | [39m[31m[1m^[22m[39m
 [90m 12 | [39m[36mimport[39m ngAria             from [32m'angular-aria'[39m[33m;[39m 
 [90m 13 | [39m[36mimport[39m ngSantize          from [32m'angular-sanitize'[39m[33m;[39m 
 [90m 14 | [39m[36mimport[39m ngCookies          from [32m'angular-cookies'[39m[33m;[39m [0m

BabelLoaderError: SyntaxError: C:/Users/david/repositories/stemn-frontend/website/src/app/app.js: Unexpected token, expected { (11:0)

[0m [90m  9 | [39m
 [90m 10 | [39m[90m// Angular modules[39m
[31m[1m>[22m[39m[90m 11 | [39m[36mimport[39m ngAnimate          from [32m'angular-animate'[39m[33m;[39m 
 [90m    | [39m[31m[1m^[22m[39m
 [90m 12 | [39m[36mimport[39m ngAria             from [32m'angular-aria'[39m[33m;[39m 
 [90m 13 | [39m[36mimport[39m ngSantize          from [32m'angular-sanitize'[39m[33m;[39m 
 [90m 14 | [39m[36mimport[39m ngCookies          from [32m'angular-cookies'[39m[33m;[39m [0m

    at transpile (C:\Users\david\repositories\stemn-frontend\website\node_modules\babel-loader\lib\index.js:52:13)
    at Object.module.exports (C:\Users\david\repositories\stemn-frontend\website\node_modules\babel-loader\lib\index.js:133:12)
    at applySyncOrAsync (C:\Users\david\repositories\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\david\repositories\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\david\repositories\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\david\repositories\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\david\repositories\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\david\repositories\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\david\repositories\node_modules\happypack\lib\applyLoaders.js:116:3)
    at HappyWorker.compile (C:\Users\david\repositories\node_modules\happypack\lib\HappyWorker.js:32:3)
    at Object.compile (C:\Users\david\repositories\node_modules\happypack\lib\HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (C:\Users\david\repositories\node_modules\happypack\lib\HappyPlugin.js:345:14)
    at HappyPlugin.compileInForeground (C:\Users\david\repositories\node_modules\happypack\lib\HappyPlugin.js:320:25)
    at HappyPlugin.compile (C:\Users\david\repositories\node_modules\happypack\lib\HappyPlugin.js:236:32)
    at Object.HappyLoader (C:\Users\david\repositories\node_modules\happypack\lib\HappyLoader.js:30:15)
    at WEBPACK_CORE_LOADER_EXECUTION (C:\Users\david\repositories\stemn-frontend\website\node_modules\webpack-core\lib\NormalModuleMixin.js:155:71)
    at runSyncOrAsync (C:\Users\david\repositories\stemn-frontend\website\node_modules\webpack-core\lib\NormalModuleMixin.js:155:93)
    at nextLoader (C:\Users\david\repositories\stemn-frontend\website\node_modules\webpack-core\lib\NormalModuleMixin.js:290:3)
    at C:\Users\david\repositories\stemn-frontend\website\node_modules\webpack-core\lib\NormalModuleMixin.js:259:5
    at Storage.finished (C:\Users\david\repositories\stemn-frontend\website\node_modules\enhanced-resolve\lib\CachedInputFileSystem.js:38:16)
    at C:\Users\david\repositories\stemn-frontend\website\node_modules\graceful-fs\graceful-fs.js:78:16
    at FSReqWrap.readFileAfterClose [as oncomplete] (fs.js:445:3)